[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/sxgd/modules/SxFontAwesome/SxFAButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main-menu/HostMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/OstrichSans-Medium.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/OstrichSans-Heavy.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 64
extra_spacing_top = 8
extra_spacing_bottom = 8
font_data = ExtResource( 3 )

[node name="HostMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )
script = ExtResource( 2 )

[node name="MainMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="MainRows" type="VBoxContainer" parent="MainMargin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0
custom_constants/separation = 50

[node name="TopColumn" type="HBoxContainer" parent="MainMargin/MainRows"]
margin_right = 1240.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="MainMargin/MainRows/TopColumn" instance=ExtResource( 1 )]
icon_name = "chevron-left"

[node name="SettingsTitle" type="Label" parent="MainMargin/MainRows/TopColumn"]
margin_left = 1127.0
margin_top = 7.0
margin_right = 1240.0
margin_bottom = 56.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "HOST"

[node name="MiddleColumn" type="HBoxContainer" parent="MainMargin/MainRows"]
margin_top = 114.0
margin_right = 1240.0
margin_bottom = 564.0
size_flags_vertical = 3

[node name="Parameters" type="VBoxContainer" parent="MainMargin/MainRows/MiddleColumn"]
margin_right = 1240.0
margin_bottom = 450.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="MapSelection" type="VBoxContainer" parent="MainMargin/MainRows/MiddleColumn/Parameters"]
margin_right = 1240.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="Label" type="Label" parent="MainMargin/MainRows/MiddleColumn/Parameters/MapSelection"]
margin_left = 475.0
margin_right = 765.0
margin_bottom = 49.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Map selection"

[node name="Values" type="HBoxContainer" parent="MainMargin/MainRows/MiddleColumn/Parameters/MapSelection"]
margin_top = 99.0
margin_right = 1240.0
margin_bottom = 248.0
size_flags_vertical = 3
custom_constants/separation = 50

[node name="Map1" type="Button" parent="MainMargin/MainRows/MiddleColumn/Parameters/MapSelection/Values"]
margin_right = 380.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
toggle_mode = true
text = "Map 1"

[node name="Map2" type="Button" parent="MainMargin/MainRows/MiddleColumn/Parameters/MapSelection/Values"]
margin_left = 430.0
margin_right = 810.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
toggle_mode = true
text = "Map 2"

[node name="Label" type="Label" parent="MainMargin/MainRows/MiddleColumn/Parameters/MapSelection/Values/Map2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.360784, 0.360784, 0.360784, 1 )
custom_fonts/font = SubResource( 4 )
text = "Map 2
Coming soon"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map3" type="Button" parent="MainMargin/MainRows/MiddleColumn/Parameters/MapSelection/Values"]
margin_left = 860.0
margin_right = 1240.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
disabled = true
toggle_mode = true

[node name="Label" type="Label" parent="MainMargin/MainRows/MiddleColumn/Parameters/MapSelection/Values/Map3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.360784, 0.360784, 0.360784, 1 )
custom_fonts/font = SubResource( 5 )
text = "Map 3
Coming soon"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxPlayersInput" type="HBoxContainer" parent="MainMargin/MainRows/MiddleColumn/Parameters"]
margin_top = 298.0
margin_right = 1240.0
margin_bottom = 349.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MainMargin/MainRows/MiddleColumn/Parameters/MaxPlayersInput"]
margin_top = 3.0
margin_right = 230.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 6 )
text = "Max players"

[node name="Value" type="LineEdit" parent="MainMargin/MainRows/MiddleColumn/Parameters/MaxPlayersInput"]
margin_left = 250.0
margin_right = 1240.0
margin_bottom = 51.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
align = 2
placeholder_text = "32"
placeholder_alpha = 0.2
caret_blink = true

[node name="PortInput" type="HBoxContainer" parent="MainMargin/MainRows/MiddleColumn/Parameters"]
margin_top = 399.0
margin_right = 1240.0
margin_bottom = 450.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MainMargin/MainRows/MiddleColumn/Parameters/PortInput"]
margin_top = 3.0
margin_right = 231.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 6 )
text = "Server port"

[node name="Value" type="LineEdit" parent="MainMargin/MainRows/MiddleColumn/Parameters/PortInput"]
margin_left = 251.0
margin_right = 1240.0
margin_bottom = 51.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
align = 2
placeholder_text = "13795"
placeholder_alpha = 0.2
caret_blink = true

[node name="BottomColumn" type="HBoxContainer" parent="MainMargin/MainRows"]
margin_top = 614.0
margin_right = 1240.0
margin_bottom = 680.0

[node name="StartButton" type="Button" parent="MainMargin/MainRows/BottomColumn"]
margin_left = 1124.0
margin_right = 1240.0
margin_bottom = 66.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 8 )
disabled = true
text = "Start"
